# tinyml-tensorlab

./: .gitignore  .gitmodules  ADDING_NEW_MODELS.md  ARCHITECTURE.md  DEVICE_TASK_SUPPORT.md  LICENSE  README.md  README_TESTING.md  TEST_SCRIPT_SUMMARY.md  config_byom_for_compilation.yaml  config_timeseries_anomalydetection_ecg.yaml  config_timeseries_classification_dsi.yaml  config_timeseries_classification_dsk.yaml  config_timeseries_classification_ecg.yaml  config_timeseries_classification_fan_blade_dsi.yaml  config_timeseries_classification_motor_bearing_dsk.yaml  config_timeseries_classification_nas_example.yaml  config_timeseries_regression_dsi.yaml  config_timeseries_regression_micro_turbine_dsi.yaml  git_pull_all.sh  git_submodule_update.sh  git_subtree_pull_all.sh  git_update_all.sh  pyproject.toml  readme_sdk.md  requirements.txt  run_tests.sh  run_tinyml_modelmaker.sh  run_tinyml_modelzoo.bat  run_tinyml_modelzoo.sh  setup.py  setup.sh  setup_all.sh  setup_c2000ware.sh  setup_cg_tools.sh  setup_cpu.sh  setup_f29clang_tools.sh
.claude-plugin/: marketplace.json
docs/: Makefile  (+7 more)
tinyml-modeloptimization/torchmodelopt/: README.md  pyproject.toml  requirements.txt  setup.py  setup.sh  version.py
tinyml-modeloptimization/torchmodelopt/examples/: README.md  model_export_example.py  model_export_torch_utils.py  model_quant_utils.py
tinyml-modeloptimization/torchmodelopt/examples/audio_keyword_spotting/: README.md  main.py  requirements.txt
tinyml-modeloptimization/torchmodelopt/examples/fmnist_image_classification/: README.md  fmnist_tinpu_qat.py  run_fmnist.py
tinyml-modeloptimization/torchmodelopt/examples/mnist_lenet5_classification/: main.py  readme.md
tinyml-modeloptimization/torchmodelopt/examples/motor_fault_time_series_classification/: motor_fault_classification.py  motor_fault_classification_tinpu_quant.py
tinyml-modeloptimization/torchmodelopt/examples/torque_time_series_regression/: torque_regression_tinpu_quant.py
tinyml-modeloptimization/torchmodelopt/requirements/: requirements.txt  requirements_ti_packages.txt
tinyml-modeloptimization/torchmodelopt/tinyml_torchmodelopt/: __init__.py
tinyml-modeloptimization/torchmodelopt/tinyml_torchmodelopt/nas/: architect.py  genotypes.py  model.py  model_search_cnn.py  operations.py  train_cnn_search.py  utils.py
tinyml-modeloptimization/torchmodelopt/tinyml_torchmodelopt/quantization/: __init__.py  common.py
tinyml-modeloptimization/torchmodelopt/tinyml_torchmodelopt/surgery/: __init__.py  custom_surgery_functions.py  replacer.py  surgery.py
tinyml-tinyverse/: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  setup.sh  setup_cpu.sh
tinyml-tinyverse/references/common/: compilation.py
tinyml-tinyverse/references/timeseries_classification/: train.py
tinyml-tinyverse/requirements/: requirements.txt  requirements_ti_packages.txt
tinyml-tinyverse/tinyml_tinyverse/: version.py
tinyml-tinyverse/tinyml_tinyverse/common/: __init__.py
tinyml-tinyverse/tinyml_tinyverse/common/compilation/: __init__.py  tvm_input_config.py
tinyml-tinyverse/tinyml_tinyverse/common/datasets/: __init__.py  image_dataset.py  timeseries_dataset.py
tinyml-tinyverse/tinyml_tinyverse/common/models/: __init__.py  generic_autoencoder_models.py  generic_classification_models.py  generic_forecasting_models.py  generic_image_models.py  generic_model_spec.py  generic_models.py  generic_regression_models.py  tinynn.py
tinyml-tinyverse/tinyml_tinyverse/common/transforms/: __init__.py  basic_transforms.py  haar.py  hadamard.py
tinyml-tinyverse/tinyml_tinyverse/common/utils/: __init__.py  gof_utils.py  load_weights.py  mdcl_utils.py  misc_utils.py  ondevice_training.py  py_utils.py  utils.py
tinyml-tinyverse/tinyml_tinyverse/references/: __init__.py
tinyml-tinyverse/tinyml_tinyverse/references/audio_classification/: test_onnx.py  train.py
tinyml-tinyverse/tinyml_tinyverse/references/common/: __init__.py  compilation.py  test_onnx_base.py  train_base.py
tinyml-tinyverse/tinyml_tinyverse/references/image_classification/: test_onnx.py  train.py
tinyml-tinyverse/tinyml_tinyverse/references/timeseries_anomalydetection/: test_onnx.py  test_onnx_cls.py  train.py
tinyml-tinyverse/tinyml_tinyverse/references/timeseries_classification/: test_onnx.py  train.py
tinyml-tinyverse/tinyml_tinyverse/references/timeseries_forecasting/: test_onnx.py  train.py
tinyml-tinyverse/tinyml_tinyverse/references/timeseries_regression/: test_onnx.py  train.py
torchmodelopt/: README.md  pyproject.toml  requirements.txt  setup.py  setup.sh  version.py
torchmodelopt/examples/: README.md  model_export_example.py  model_export_onnx_utils.py  model_export_torch_utils.py
torchmodelopt/examples/audio_keyword_spotting/: README.md  main.py  quant_cal_indices_mlperf.txt
torchmodelopt/examples/audio_keyword_spotting/trained_models/: kws_dscnn_pb2pth_checkpoint.pth  kws_dscnn_pb2pth_model.pth
torchmodelopt/examples/fmnist_image_classification/: fmnist_ti_qat.py  fmnist_tinpu_qat.py
torchmodelopt/examples/mnist_lenet5_classification/: readme.md
torchmodelopt/examples/motor_fault_time_series_classification/: README.md  motor_fault_classification_simple_qat.py  motor_fault_classification_tinpu_quant.py  simple_qconfig.py
torchmodelopt/examples/torque_time_series_regression/: README.md  torque_regression_tinpu_quant.py
torchmodelopt/requirements/: requirements.txt  requirements_ti_packages.txt
torchmodelopt/tinyml_torchmodelopt/: __init__.py
torchmodelopt/tinyml_torchmodelopt/nas/: architect.py  model.py  model_search_cnn.py  readme.md  train_cnn_search.py
torchmodelopt/tinyml_torchmodelopt/quantization/: __init__.py  common.py
torchmodelopt/tinyml_torchmodelopt/quantization/generic/: __init__.py  quant_fx.py  quant_modules.py
torchmodelopt/tinyml_torchmodelopt/quantization/tinpu/: __init__.py  quant_fx.py  quant_helper_func.py  quant_modules.py  quant_utils.py
torchmodelopt/tinyml_torchmodelopt/surgery/: README.md  __init__.py  custom_modules.py  custom_surgery_functions.py  quant_helper_func.py  replacer.py  surgery.py
(+1118 files in other folders)
