[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyml_modelzoo"
version = "1.3.0"
description = "TI's TinyML Model Zoo - Centralized model definitions for microcontrollers"
readme = "README.md"
requires-python = "==3.10.*"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
]
keywords = [
    "artificial intelligence",
    "deep learning",
    "tinyml",
    "microcontrollers",
    "model zoo",
]
dependencies = [
    "torch==2.7.1",
    "PyYAML==6.0.3",
    "numpy==2.2.6",
]

[[project.authors]]
name = "Texas Instruments"
email = "thonse@ti.com"

[project.license]
text = "BSD 3-Clause"

[project.urls]
Homepage = "https://github.com/TexasInstruments/tinyml-tensorlab/tree/main/tinyml-modelzoo"
"Bug Reports" = "https://e2e.ti.com/support/processors/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["tinyml_modelzoo*"]
exclude = ["tests*"]
