[build-system]
requires = [ "setuptools>=80",
	"wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "tinyml_modelmaker"
version = "1.3.0"
description = "Tiny ML ModelMaker"
readme = "README.md"
requires-python = "==3.10.*"
classifiers = [ "Development Status :: 4 - Beta",
	"Programming Language :: Python :: 3.10",]
dependencies = [
	"defusedxml==0.7.1",
	"numpy==2.2.6",
	"PyYAML==6.0.3",
	"tqdm==4.67.1",
	"requests==2.32.5",
	"torch==2.7.1",
	"tinyml_modelzoo @ git+https://github.com/TexasInstruments/tinyml-tensorlab.git@r1.3#subdirectory=tinyml-modelzoo",
	"tinyml_tinyverse @ git+https://github.com/TexasInstruments/tinyml-tensorlab.git@r1.3#subdirectory=tinyml-tinyverse",
	"tinyml_torchmodelopt @ git+https://github.com/TexasInstruments/tinyml-tensorlab.git@r1.3#subdirectory=tinyml-modeloptimization/torchmodelopt",
	"ti_mcu_nnc @ https://software-dl.ti.com/mctools/esd/tvm/mcu/ti_mcu_nnc-2.1.1-cp310-cp310-linux_x86_64.whl ; platform_system == 'Linux'",
	"ti_mcu_nnc @ https://software-dl.ti.com/mctools/esd/tvm/mcu/ti_mcu_nnc-2.1.1-cp310-cp310-win_amd64.whl ; platform_system == 'Windows'",
]
authors = [{name = "Adithya Thonse", email = "thonse@ti.com"}]

[project.license]
text = "BSD 3-Clause"

[project.urls]
Homepage = "https://github.com/TexasInstruments/tinyml-tensorlab/tree/main/tinyml-modelmaker"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [ "tinyml_modelmaker*",]
exclude = [ "tests*",]

[tool.setuptools.dynamic.version]
attr = "tinyml_modelmaker.__version__"
