[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyml_tinyverse"
version = "1.0.0"
description = "A tiny machine learning project in the tinyverse"
authors = [
    { name = "Adithya Thonse", email = "thonse@ti.com" }
]
license = { text = "BSD 3-Clause" }
readme = "README.md"
requires-python = "==3.10.*"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10"
]
keywords = ["artificial intelligence", "deep learning", "image classification", "visual wake words", "time series classification", "audio classification", "keyword spotting"]

dependencies = [
    "numpy==1.26.4",
    "onnx==1.16.1",
    "onnxruntime==1.19.0",
    "protobuf==5.27.3",
    "pandas==2.2.2",
    "pathlib2==2.3.7.post1",
    "PyYAML==6.0.2",
    "scipy==1.13.1",
    "tabulate==0.9.0",
    "torcheval==0.0.7",
    "torchinfo==1.8.0",
    "cryptography==43.0.1",
    "matplotlib==3.9.2",
    "scikit-learn==1.5.2",
    "torch==2.3.0",
    "cython",
    "pycocotools",
    "opencv-python",
    "pillow",
#    "tinyml_torchmodelopt @ git+ssh://git@bitbucket.itg.ti.com/tinyml-algo/tinyml-modeloptimization.git@main#subdirectory=torchmodelopt",
    "tinyml_torchmodelopt @ git+https://github.com/TexasInstruments/tinyml-tensorlab.git@main#subdirectory=tinyml-modeloptimization/torchmodelopt",
    "ti_mcu_nnc @ https://software-dl.ti.com/mctools/esd/tvm/mcu/ti_mcu_nnc-1.3.0-cp310-cp310-linux_x86_64.whl ; platform_system == 'Linux'",
    "ti_mcu_nnc @ https://software-dl.ti.com/mctools/esd/tvm/mcu/ti_mcu_nnc-1.3.0-cp310-cp310-win_amd64.whl ; platform_system == 'Windows'",
    "colorama==0.4.6"
]

[project.urls]
Homepage = "https://github.com/TexasInstruments/tinyml-tensorlab/tree/main/tinyml-tinyverse"
"Bug Reports" = "https://e2e.ti.com/support/processors/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["tinyml_tinyverse*"]
exclude = ["tests*"]
