[build-system]
requires = [ "setuptools>=42",
	"wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "tinyml_tinyverse"
version = "1.3.0"
description = "A tiny machine learning project in the tinyverse"
readme = "README.md"
requires-python = "==3.10.*"
classifiers = [ "Development Status :: 4 - Beta",
	"Programming Language :: Python :: 3.10",]
keywords = [ "artificial intelligence",
	"deep learning",
	"image classification",
	"visual wake words",
	"time series classification",
	"audio classification",
	"keyword spotting",]
dependencies = [
	"numpy==2.2.6",
	"onnx==1.19.1",
	"onnxruntime==1.23.2",
	"onnx_graphsurgeon==0.5.8",
	"pandas==2.3.3",
	"PyYAML==6.0.3",
	"scipy==1.15.3",
	"tabulate==0.9.0",
	"torcheval==0.0.7",
	"torchinfo==1.8.0",
	"cryptography==46.0.3",
	"matplotlib==3.10.8",
	"scikit-learn==1.7.2",
	"torch==2.7.1",
	"cmsisdsp==1.10.1",
	"torchvision==0.22.1",
	"tinyml_modelzoo @ git+https://github.com/TexasInstruments/tinyml-tensorlab.git@r1.3#subdirectory=tinyml-modelzoo",
	"tinyml_torchmodelopt @ git+https://github.com/TexasInstruments/tinyml-tensorlab.git@r1.3#subdirectory=tinyml-modeloptimization/torchmodelopt",
	"ti_mcu_nnc @ https://software-dl.ti.com/mctools/esd/tvm/mcu/ti_mcu_nnc-2.1.1-cp310-cp310-linux_x86_64.whl ; platform_system == 'Linux'",
	"ti_mcu_nnc @ https://software-dl.ti.com/mctools/esd/tvm/mcu/ti_mcu_nnc-2.1.1-cp310-cp310-win_amd64.whl ; platform_system == 'Windows'",
	"colorama==0.4.6",
	"PyWavelets==1.8.0",
	"onnx-graphsurgeon==0.5.8",
]
[[project.authors]]
name = "Adithya Thonse"
email = "thonse@ti.com"

[project.license]
text = "BSD 3-Clause"

[project.urls]
Homepage = "https://github.com/TexasInstruments/tinyml-tensorlab/tree/main/tinyml-tinyverse"
"Bug Reports" = "https://e2e.ti.com/support/processors/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [ "tinyml_tinyverse*",]
exclude = [ "tests*",]
