[build-system]
requires = [ "setuptools>=42",
	"wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "tinyml_torchmodelopt"
version = "1.3.0"
description = "Tiny ML Model Optimization ToolKit For Torch"
readme = "README.md"
requires-python = "==3.10.*"
classifiers = [ "Development Status :: 4 - Beta",
	"Programming Language :: Python :: 3.10",]
dependencies = [
	"numpy==2.2.6",
	"onnxsim==0.4.36",
	"onnx==1.19.1",
	"onnxruntime==1.23.2",
	"colorama==0.4.6",
	"torch==2.7.1",
]
[[project.authors]]
name = "Adithya Thonse"
email = "thonse@ti.com"

[project.license]
text = "BSD 3-Clause"

[project.urls]
Homepage = "https://github.com/TexasInstruments/tinyml-tensorlab/tree/main/tinyml-modeloptimization"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [ "tinyml_torchmodelopt*",]
exclude = [ "tests*",]

[tool.setuptools.dynamic.version]
attr = "tinyml_torchmodelopt.__version__"
